Codigo/XccParser.java
// Generated from Xcc.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XccParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, EXTENDS=2, ABRCHAVE=3, PTVIR=4, FECHCHAVE=5, INT=6, STRING=7, 
		ABRCOL=8, FECHCOL=9, VIRG=10, CONSTRUCTOR=11, ABRPAR=12, FECHPAR=13, BREAK=14, 
		ATR=15, PRINT=16, READ=17, RETURN=18, SUPER=19, IF=20, ELSE=21, FOR=22, 
		PONTO=23, NEW=24, MENOR=25, MAIOR=26, MENORIG=27, MAIORIG=28, IGUAL=29, 
		DIFER=30, OPMAIS=31, OPMENOS=32, OPVEZES=33, OPDIV=34, OPMOD=35, NULL=36, 
		THEN=37, INTCONSTANT=38, STRINGCONSTANT=39, IDENT=40, WS=41;
	public static final int
		RULE_program = 0, RULE_classlist = 1, RULE_classlistaux = 2, RULE_classdecl = 3, 
		RULE_classbody = 4, RULE_classbodyaux = 5, RULE_classbodyaux2 = 6, RULE_classbodyaux3 = 7, 
		RULE_vardecl = 8, RULE_intstringident = 9, RULE_cols = 10, RULE_vardeclaux = 11, 
		RULE_constructdecl = 12, RULE_methoddecl = 13, RULE_methodbody = 14, RULE_paramlist = 15, 
		RULE_paramlistaux = 16, RULE_statement = 17, RULE_intstring = 18, RULE_virgidentcols = 19, 
		RULE_statementaux = 20, RULE_statementaux2 = 21, RULE_expralocexpr = 22, 
		RULE_atribstat = 23, RULE_printstat = 24, RULE_readstat = 25, RULE_returnstat = 26, 
		RULE_superstat = 27, RULE_ifstat = 28, RULE_forstat = 29, RULE_forstataux = 30, 
		RULE_statlist = 31, RULE_lvalue = 32, RULE_lvalueaux = 33, RULE_alocexpression = 34, 
		RULE_alocexpression2 = 35, RULE_expression = 36, RULE_expresionaux = 37, 
		RULE_numexpression = 38, RULE_numexpressionaux = 39, RULE_term = 40, RULE_termaux = 41, 
		RULE_unaryexpr = 42, RULE_factor = 43, RULE_arglist = 44, RULE_arglistaux = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classlist", "classlistaux", "classdecl", "classbody", "classbodyaux", 
			"classbodyaux2", "classbodyaux3", "vardecl", "intstringident", "cols", 
			"vardeclaux", "constructdecl", "methoddecl", "methodbody", "paramlist", 
			"paramlistaux", "statement", "intstring", "virgidentcols", "statementaux", 
			"statementaux2", "expralocexpr", "atribstat", "printstat", "readstat", 
			"returnstat", "superstat", "ifstat", "forstat", "forstataux", "statlist", 
			"lvalue", "lvalueaux", "alocexpression", "alocexpression2", "expression", 
			"expresionaux", "numexpression", "numexpressionaux", "term", "termaux", 
			"unaryexpr", "factor", "arglist", "arglistaux"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'extends'", "'{'", "';'", "'}'", "'int'", "'string'", 
			"'['", "']'", "','", "'constructor'", "'('", "')'", "'break'", "'='", 
			"'print'", "'read'", "'return'", "'super'", "'if'", "'else'", "'for'", 
			"'.'", "'new'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'null'", "'then'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "EXTENDS", "ABRCHAVE", "PTVIR", "FECHCHAVE", "INT", "STRING", 
			"ABRCOL", "FECHCOL", "VIRG", "CONSTRUCTOR", "ABRPAR", "FECHPAR", "BREAK", 
			"ATR", "PRINT", "READ", "RETURN", "SUPER", "IF", "ELSE", "FOR", "PONTO", 
			"NEW", "MENOR", "MAIOR", "MENORIG", "MAIORIG", "IGUAL", "DIFER", "OPMAIS", 
			"OPMENOS", "OPVEZES", "OPDIV", "OPMOD", "NULL", "THEN", "INTCONSTANT", 
			"STRINGCONSTANT", "IDENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Xcc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XccParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ClasslistContext classlist() {
			return getRuleContext(ClasslistContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				classlist();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClasslistContext extends ParserRuleContext {
		public ClassdeclContext classdecl() {
			return getRuleContext(ClassdeclContext.class,0);
		}
		public ClasslistauxContext classlistaux() {
			return getRuleContext(ClasslistauxContext.class,0);
		}
		public ClasslistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterClasslist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitClasslist(this);
		}
	}

	public final ClasslistContext classlist() throws RecognitionException {
		ClasslistContext _localctx = new ClasslistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			classdecl();
			setState(97);
			classlistaux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClasslistauxContext extends ParserRuleContext {
		public ClasslistContext classlist() {
			return getRuleContext(ClasslistContext.class,0);
		}
		public ClasslistauxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classlistaux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterClasslistaux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitClasslistaux(this);
		}
	}

	public final ClasslistauxContext classlistaux() throws RecognitionException {
		ClasslistauxContext _localctx = new ClasslistauxContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classlistaux);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				classlist();
				}
				break;
			case EOF:
			case FECHCHAVE:
			case INT:
			case STRING:
			case CONSTRUCTOR:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassdeclContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(XccParser.CLASS, 0); }
		public List<TerminalNode> IDENT() { return getTokens(XccParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(XccParser.IDENT, i);
		}
		public ClassbodyContext classbody() {
			return getRuleContext(ClassbodyContext.class,0);
		}
		public TerminalNode EXTENDS() { return getToken(XccParser.EXTENDS, 0); }
		public ClassdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterClassdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitClassdecl(this);
		}
	}

	public final ClassdeclContext classdecl() throws RecognitionException {
		ClassdeclContext _localctx = new ClassdeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classdecl);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				match(CLASS);
				setState(104);
				match(IDENT);
				setState(105);
				classbody();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				match(CLASS);
				setState(107);
				match(IDENT);
				setState(108);
				match(EXTENDS);
				setState(109);
				match(IDENT);
				setState(110);
				classbody();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassbodyContext extends ParserRuleContext {
		public TerminalNode ABRCHAVE() { return getToken(XccParser.ABRCHAVE, 0); }
		public ClassbodyauxContext classbodyaux() {
			return getRuleContext(ClassbodyauxContext.class,0);
		}
		public Classbodyaux2Context classbodyaux2() {
			return getRuleContext(Classbodyaux2Context.class,0);
		}
		public Classbodyaux3Context classbodyaux3() {
			return getRuleContext(Classbodyaux3Context.class,0);
		}
		public TerminalNode FECHCHAVE() { return getToken(XccParser.FECHCHAVE, 0); }
		public ClasslistContext classlist() {
			return getRuleContext(ClasslistContext.class,0);
		}
		public ClassbodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterClassbody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitClassbody(this);
		}
	}

	public final ClassbodyContext classbody() throws RecognitionException {
		ClassbodyContext _localctx = new ClassbodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classbody);
		try {
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(ABRCHAVE);
				setState(114);
				classbodyaux();
				setState(115);
				classbodyaux2();
				setState(116);
				classbodyaux3();
				setState(117);
				match(FECHCHAVE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				match(ABRCHAVE);
				setState(120);
				classlist();
				setState(121);
				classbodyaux();
				setState(122);
				classbodyaux2();
				setState(123);
				classbodyaux3();
				setState(124);
				match(FECHCHAVE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassbodyauxContext extends ParserRuleContext {
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public TerminalNode PTVIR() { return getToken(XccParser.PTVIR, 0); }
		public ClassbodyauxContext classbodyaux() {
			return getRuleContext(ClassbodyauxContext.class,0);
		}
		public ClassbodyauxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbodyaux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterClassbodyaux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitClassbodyaux(this);
		}
	}

	public final ClassbodyauxContext classbodyaux() throws RecognitionException {
		ClassbodyauxContext _localctx = new ClassbodyauxContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classbodyaux);
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				vardecl();
				setState(129);
				match(PTVIR);
				setState(130);
				classbodyaux();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Classbodyaux2Context extends ParserRuleContext {
		public ConstructdeclContext constructdecl() {
			return getRuleContext(ConstructdeclContext.class,0);
		}
		public Classbodyaux2Context classbodyaux2() {
			return getRuleContext(Classbodyaux2Context.class,0);
		}
		public Classbodyaux2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbodyaux2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterClassbodyaux2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitClassbodyaux2(this);
		}
	}

	public final Classbodyaux2Context classbodyaux2() throws RecognitionException {
		Classbodyaux2Context _localctx = new Classbodyaux2Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_classbodyaux2);
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONSTRUCTOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				constructdecl();
				setState(136);
				classbodyaux2();
				}
				break;
			case FECHCHAVE:
			case INT:
			case STRING:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Classbodyaux3Context extends ParserRuleContext {
		public MethoddeclContext methoddecl() {
			return getRuleContext(MethoddeclContext.class,0);
		}
		public Classbodyaux3Context classbodyaux3() {
			return getRuleContext(Classbodyaux3Context.class,0);
		}
		public Classbodyaux3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbodyaux3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterClassbodyaux3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitClassbodyaux3(this);
		}
	}

	public final Classbodyaux3Context classbodyaux3() throws RecognitionException {
		Classbodyaux3Context _localctx = new Classbodyaux3Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_classbodyaux3);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case STRING:
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				methoddecl();
				setState(142);
				classbodyaux3();
				}
				break;
			case FECHCHAVE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclContext extends ParserRuleContext {
		public IntstringidentContext intstringident() {
			return getRuleContext(IntstringidentContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(XccParser.IDENT, 0); }
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public VardeclauxContext vardeclaux() {
			return getRuleContext(VardeclauxContext.class,0);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterVardecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitVardecl(this);
		}
	}

	public final VardeclContext vardecl() throws RecognitionException {
		VardeclContext _localctx = new VardeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_vardecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			intstringident();
			setState(148);
			match(IDENT);
			setState(149);
			cols();
			setState(150);
			vardeclaux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntstringidentContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(XccParser.INT, 0); }
		public TerminalNode STRING() { return getToken(XccParser.STRING, 0); }
		public TerminalNode IDENT() { return getToken(XccParser.IDENT, 0); }
		public IntstringidentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intstringident; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterIntstringident(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitIntstringident(this);
		}
	}

	public final IntstringidentContext intstringident() throws RecognitionException {
		IntstringidentContext _localctx = new IntstringidentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_intstringident);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << IDENT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColsContext extends ParserRuleContext {
		public TerminalNode ABRCOL() { return getToken(XccParser.ABRCOL, 0); }
		public TerminalNode FECHCOL() { return getToken(XccParser.FECHCOL, 0); }
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public ColsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cols; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterCols(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitCols(this);
		}
	}

	public final ColsContext cols() throws RecognitionException {
		ColsContext _localctx = new ColsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cols);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ABRCOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				match(ABRCOL);
				setState(155);
				match(FECHCOL);
				setState(156);
				cols();
				}
				break;
			case PTVIR:
			case VIRG:
			case FECHPAR:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclauxContext extends ParserRuleContext {
		public TerminalNode VIRG() { return getToken(XccParser.VIRG, 0); }
		public TerminalNode IDENT() { return getToken(XccParser.IDENT, 0); }
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public VardeclauxContext vardeclaux() {
			return getRuleContext(VardeclauxContext.class,0);
		}
		public VardeclauxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardeclaux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterVardeclaux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitVardeclaux(this);
		}
	}

	public final VardeclauxContext vardeclaux() throws RecognitionException {
		VardeclauxContext _localctx = new VardeclauxContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_vardeclaux);
		try {
			setState(166);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VIRG:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				match(VIRG);
				setState(161);
				match(IDENT);
				setState(162);
				cols();
				setState(163);
				vardeclaux();
				}
				break;
			case PTVIR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructdeclContext extends ParserRuleContext {
		public TerminalNode CONSTRUCTOR() { return getToken(XccParser.CONSTRUCTOR, 0); }
		public MethodbodyContext methodbody() {
			return getRuleContext(MethodbodyContext.class,0);
		}
		public ConstructdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterConstructdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitConstructdecl(this);
		}
	}

	public final ConstructdeclContext constructdecl() throws RecognitionException {
		ConstructdeclContext _localctx = new ConstructdeclContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_constructdecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(CONSTRUCTOR);
			setState(169);
			methodbody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethoddeclContext extends ParserRuleContext {
		public IntstringidentContext intstringident() {
			return getRuleContext(IntstringidentContext.class,0);
		}
		public ColsContext cols() {
			return getRuleContext(ColsContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(XccParser.IDENT, 0); }
		public MethodbodyContext methodbody() {
			return getRuleContext(MethodbodyContext.class,0);
		}
		public MethoddeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methoddecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).enterMethoddecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XccListener ) ((XccListener)listener).exitMethoddecl(this);
		}
	}
